# des-gui

./: Cargo.toml
src/: breakpoint.rs  controls.rs  lib.rs  main.rs  tracing.rs
src/inspector/: mod.rs  props.rs
src/plot/: mod.rs
src/sim/: mod.rs
src/tracing/: format.rs  mod.rs
