[package]
name = "des-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
des = { path = "../des/des", features = ["full"] }
eframe = { version = "*", features = ["persistence"] }
egui = "0.31"
egui_extras = "0.31.1"
egui_graphs = "0.25.0"
egui_plot = "0.31.0"
env_logger = "0.11.7"
indexmap = "2.8.0"
petgraph = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[patch.crates-io]
des = { path = "../des/des" }
