[package]
name = "des-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
des = { path = "../des/des", features = ["full"] }
eframe = { version = "*", features = ["persistence"] }
egui = "0.31"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui_graphs = "0.25.0"
egui_plot = "0.31.0"
fxhash = "0.2.1"
petgraph = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "*"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[patch.crates-io]
des = { path = "../des/des" }
